RESOLVED FIXED30239
V8NPObject and c_instance don't throw an exception into javascript if an invoke call fails
https://bugs.webkit.org/show_bug.cgi?id=30239
Summary V8NPObject and c_instance don't throw an exception into javascript if an invo...
Nate Chapin
Reported 2009-10-08 16:43:38 PDT
If an NPObject invoke() call returns false, something went wrong and an exception should be thrown in V8. Currently we fail silently. Error message should probably match Firefox ("Error calling method on NPObject!").
Attachments
patch + layout test (9.48 KB, patch)
2009-10-13 15:08 PDT, Nate Chapin
no flags
Nate Chapin
Comment 1 2009-10-13 10:34:10 PDT
This issue appears to affect JSC also, so I'm fixing it there too.
Nate Chapin
Comment 2 2009-10-13 15:08:14 PDT
Created attachment 41132 [details] patch + layout test
Dimitri Glazkov (Google)
Comment 3 2009-10-15 15:00:17 PDT
V8 part looks good.
Adam Barth
Comment 4 2009-10-18 23:15:55 PDT
Comment on attachment 41132 [details] patch + layout test Thanks for the patch.
Yong Li
Comment 5 2009-10-19 08:47:51 PDT
Comment on attachment 41132 [details] patch + layout test Let commit bot land it
WebKit Commit Bot
Comment 6 2009-10-19 11:50:36 PDT
Comment on attachment 41132 [details] patch + layout test Clearing flags on attachment: 41132 Committed r49796: <http://trac.webkit.org/changeset/49796>
WebKit Commit Bot
Comment 7 2009-10-19 11:50:40 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 8 2009-10-19 12:24:46 PDT
Test fails on Snow Leopard: http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r49797%20(1179)/results.html We need to come up with a fix (or skip on SL) or roll this out.
Nate Chapin
Comment 9 2009-10-19 12:27:24 PDT
(In reply to comment #8) > Test fails on Snow Leopard: > http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r49797%20(1179)/results.html > > We need to come up with a fix (or skip on SL) or roll this out. I don't think I'm going to be able to fix this immediately (not least because I don't have SL), so I'm happy to either skip or roll out, whichever people prefer.
Nate Chapin
Comment 10 2009-10-19 12:58:27 PDT
(In reply to comment #9) > (In reply to comment #8) > > Test fails on Snow Leopard: > > http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r49797%20(1179)/results.html > > > > We need to come up with a fix (or skip on SL) or roll this out. > > I don't think I'm going to be able to fix this immediately (not least because I > don't have SL), so I'm happy to either skip or roll out, whichever people > prefer. Per conversation in #webkit, closing this bug. See SL-specific issue at https://bugs.webkit.org/show_bug.cgi?id=30528.
Note You need to log in before you can comment on or make changes to this bug.