2009-10-19  Nate Chapin  <japhet@chromium.org>

Reviewed by Adam Barth.

        Test that the proper exception is thrown into JS when a plugin
        invoke call returns false.

        https://bugs.webkit.org/show_bug.cgi?id=30239

        * plugins/netscape-invoke-failure-expected.txt: Added.
        * plugins/netscape-invoke-failure.html: Added.
2009-10-19  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam Barth.

        If a call to a plugin's invokeMethod, invokeDefault or construct
        returns false, throw an exception into JS.

        https://bugs.webkit.org/show_bug.cgi?id=30239

        Test: plugins/netscape-invoke-failure.html

        * bindings/v8/V8NPObject.cpp: Check return values of invokeMethod, invokeDefault and construct.
        (npObjectInvokeImpl):
        * bridge/c/c_instance.cpp:
        (JSC::Bindings::CInstance::invokeMethod): Check return value
        (JSC::Bindings::CInstance::invokeDefaultMethod): Check return value
        (JSC::Bindings::CInstance::invokeConstruct): Check return value
2009-10-19  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam Barth.

        Add testFail() to test plugin so we can test our handling of a
        plugin invoke call returning false.

        https://bugs.webkit.org/show_bug.cgi?id=30239

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp: Add testFail().
        (pluginInvoke):
        (testIdentifierToString): Always return true, since returning false will now cause an exception to be thrown.

Canonical link: https://commits.webkit.org/41250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49796 268f45cc-cd09-0410-ab3c-d52691b4dbfc